Set up retriever using llamaindex

--- a/backend/RAG.ipynb
+++ b/backend/RAG.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import requests \n",
-    "from dotenv import load_dotenv"
+    "from dotenv import load_dotenv\n",
+    "from llama_index.core import Document, VectorStoreIndex"
    ]
   },
   {
@@ -22,14 +23,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "load_dotenv()\n",
     "\n",
     "YELP_API_KEY = os.getenv(\"YELP_API_KEY\")\n",
-    "SERP_API_KEY = os.getenv(\"SERP_API_KEY\")"
+    "SERP_API_KEY = os.getenv(\"SERP_API_KEY\")\n",
+    "OPENAI_API_KEY = os.getenv(\"OPENAI_API_KEY\")"
    ]
   },
   {
@@ -102,15 +104,12 @@
     "        rating = b.get(\"rating\")\n",
     "        display_phone = b.get(\"display_phone\")\n",
     "        \n",
-    "        # Extract display_address from location\n",
     "        location = b.get(\"location\", {})\n",
     "        display_address = location.get(\"display_address\", [])\n",
     "        \n",
-    "        # business_url is stored under attributes\n",
     "        attributes = b.get(\"attributes\", {})\n",
     "        business_url = attributes.get(\"business_url\")\n",
     "        \n",
-    "        # Construct the filtered dict\n",
     "        filtered_business = {\n",
     "            \"id\": business_id,\n",
     "            \"name\": name,\n",
@@ -132,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +153,6 @@
     "  reviews_data = []\n",
     "  if \"reviews\" in results:\n",
     "        for review in results[\"reviews\"]:\n",
-    "            # Extract the comment text\n",
     "            comment_text = review.get(\"comment\", {}).get(\"text\", None)\n",
     "            if comment_text:\n",
     "                reviews_data.append(comment_text)\n",
@@ -183,6 +181,89 @@
    "source": [
     "print(filtered_data)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--------------------------------------------------------------------------------\n",
+      "Review Text: The atmosphere is casual here, and the service is pretty attentive for the most part. I don't have complaints for either, and this place is definitely one of the more affordable restaurants in K-town. There's a lot of variety on the menu, which makes it great for taking anyone whose unsure of what they really want.\n",
+      "\n",
+      "Age Tofu (6/10): Not the worst agedashi tofu I've had, but definitely one of the cheaper ones I've tasted\n",
+      "Kara Age (6.5/10): This is some pretty standard kara age fried chicken. Similar to the age tofu above\n",
+      "Kani Cream Croquettes (7/10): Pretty good croquettes that are fried well\n",
+      "Takoyaki Kara Age (7/10): I like this dish a lot, but could be better\n",
+      "Salmon Salad (8/10): The sashimi here is surprisingly solid. The salmon is a standout of this dish, and I would definitely recommend any raw salmon dish you order here.\n",
+      "Okonomiyaki (6.5/10): This is similar to the chicken kara age, but it's a little pricey for what it is\n",
+      "Zuke Salmon Don (8.5/10): This is my favorite dish here. It's clean, tasty, and doesn't break the bank! What's not to love?\n",
+      "Kimchi Cream Udon (7.5/10): Better cream udon than some other places, but overall not the best. Other restaurants under Hand Hospitality have better kimchi cream udon\n",
+      "Kurobuta Pork Udon (8/10): I personally liked this one a lot, but some others might not\n",
+      "Mew Special Roll (8/10): This has raw salmon, enough said.\n",
+      "Metadata: {'business_id': 'klAhw3xLQi9GF1tf_HnS7w', 'name': 'Izakaya MEW', 'image_url': 'https://s3-media4.fl.yelpcdn.com/bphoto/-56mpvzUi0nfYADw2uQXhg/o.jpg', 'business_url': 'http://mewnyc.com', 'display_address': '53 W 35th St', 'display_phone': '(646) 368-9384', 'rating': 4.3}\n",
+      "--------------------------------------------------------------------------------\n",
+      "Review Text: One of the best meals I've ever had. We randomly found this place and must I say WOW! We ordered quite a few tapas and shared. We all raved over the croquettes and the kimchi udon. I will dream about that udon!!! \n",
+      "\n",
+      "All our food came out fast, staff was super friendly, and we were seated quickly. We were there at lunch time and had no wait, but I imagine this place could fill up quickly. I HIGHLY recommend this place if you find yourself in Koreatown!\n",
+      "Metadata: {'business_id': 'klAhw3xLQi9GF1tf_HnS7w', 'name': 'Izakaya MEW', 'image_url': 'https://s3-media4.fl.yelpcdn.com/bphoto/-56mpvzUi0nfYADw2uQXhg/o.jpg', 'business_url': 'http://mewnyc.com', 'display_address': '53 W 35th St', 'display_phone': '(646) 368-9384', 'rating': 4.3}\n",
+      "--------------------------------------------------------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Step 1: Process JSON into Documents with Metadata\n",
+    "documents = []\n",
+    "\n",
+    "for business in filtered_data[\"businesses\"]:\n",
+    "    # Metadata to be attached to each review\n",
+    "    metadata = {\n",
+    "        \"business_id\": business[\"id\"],\n",
+    "        \"name\": business[\"name\"],\n",
+    "        \"image_url\": business[\"image_url\"],\n",
+    "        \"business_url\": business[\"business_url\"],\n",
+    "        \"display_address\": business[\"display_address\"],\n",
+    "        \"display_phone\": business[\"display_phone\"],\n",
+    "        \"rating\": business[\"rating\"]\n",
+    "    }\n",
+    "    \n",
+    "    # Create a Document for each review\n",
+    "    for review in business[\"reviews\"]:\n",
+    "        documents.append(Document(text=review, metadata=metadata))\n",
+    "\n",
+    "# Step 2: Build the Vector Store Index\n",
+    "vector_index = VectorStoreIndex.from_documents(documents)\n",
+    "\n",
+    "# Step 3: Query the Index\n",
+    "query_engine = vector_index.as_query_engine()\n",
+    "\n",
+    "# Step 4: Configure the Retriever\n",
+    "retriever = vector_index.as_retriever(\n",
+    "    top_k=4,  # Number of top results to retrieve\n",
+    ")\n",
+    "\n",
+    "# Example Retrieval\n",
+    "query = \"What restaurants should I try that have great Japanese food?\"\n",
+    "retrieved_docs = retriever.retrieve(query)\n",
+    "\n",
+    "print(\"-\" * 80)\n",
+    "\n",
+    "# Access the metadata of the retrieved documents\n",
+    "for doc in retrieved_docs:\n",
+    "    print(\"Review Text:\", doc.text)  # The review content\n",
+    "    print(\"Metadata:\", doc.metadata)  # The attached metadata\n",
+    "    print(\"-\" * 80)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
