Created function to handle summary generation and completed recommend route

--- a/backend/RAG.ipynb
+++ b/backend/RAG.ipynb
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -380,13 +380,13 @@
      "output_type": "stream",
      "text": [
       "--------------------------------------------------------------------------------\n",
-      "Score: 0.84717965\n",
+      "Score: 0.84871274\n",
       "Review Text: There's not much that beats a meal involving a bubbling steaming hot pot. My friend and I got the sukiyaki, which has wagyu, napa cabbage, shiitake, carrots, shirataki, tofu, crown daisy, and leeks all simmering in a super delicious savory broth. We also got the spicy tuna crackers that were very yummy. \n",
       "\n",
       "I loved the bustling atmosphere, and the servers were very nice. 10/10!\n",
       "Meadata: {'business_id': 'eQ4QUGvuHGBzsOrphsVc6A', 'name': 'Kimura', 'image_url': 'https://s3-media1.fl.yelpcdn.com/bphoto/qGw89FLVSK3OwX0UCJH6QA/o.jpg', 'business_url': 'https://www.kimuranyc.com', 'display_address': '31 St Marks Pl', 'display_phone': '(917) 905-1864', 'rating': 4.5}\n",
       "--------------------------------------------------------------------------------\n",
-      "Score: 0.84045196\n",
+      "Score: 0.84075475\n",
       "Review Text: Decided to finally check this place out after having it on my list for some time. The moment you walk down the stair to go to the restaurant you feel like you're being transported to Japan. The inside is a bit quaint and has Japanese music playing in the background which really sets the mood. \n",
       "\n",
       "Food: we got a few dishes to share and the portion sizes are generous, especially for the price. There were two standouts for me, the st marks roll and the spicy tuna crispy rice. They were so jam packed with flavor and just was a burst of flavors in my mouth. When I come back these are two that I would order over and over again! \n",
@@ -396,19 +396,19 @@
       "Overall recommendation: definitely a must try!\n",
       "Meadata: {'business_id': 'eQ4QUGvuHGBzsOrphsVc6A', 'name': 'Kimura', 'image_url': 'https://s3-media1.fl.yelpcdn.com/bphoto/qGw89FLVSK3OwX0UCJH6QA/o.jpg', 'business_url': 'https://www.kimuranyc.com', 'display_address': '31 St Marks Pl', 'display_phone': '(917) 905-1864', 'rating': 4.5}\n",
       "--------------------------------------------------------------------------------\n",
-      "Score: 0.83825\n",
+      "Score: 0.84004176\n",
       "Review Text: Came here on a Saturday around 5:30pm without a reservation. We were offered seats at their community table where it was shared between 4 groups of 2, so we happily took that since the wait time was estimate to be an hour. The atmosphere is great with dim lights. Plus, you can see what's going on in the kitchen with their open space while seated at the community table. \n",
       "\n",
       "We ordered the dipping noodles and the Classic Tokyo Tonkotsu. Both dishes were great. The broth for the dipping noodles was a little more on the oily side for me, so I added a bunch of sesame seeds and lemon juice that was provided. After our main dishes, we ended with the Mango Kaki-Gori which was delicious! Definitely share with another person at the very least, it is a large portion. We didn't get to try the banana pudding as everything else was very filling, but am looking forward to coming back to order more dishes and desserts!!\n",
       "Meadata: {'business_id': 'OFfZUS-nu6NDnsWe1B2bUQ', 'name': 'Tonchin', 'image_url': 'https://s3-media1.fl.yelpcdn.com/bphoto/14Xg3zb8wzjHSEf6hYXRjw/o.jpg', 'business_url': 'https://www.tonchinus.com', 'display_address': '13 W 36th St', 'display_phone': '(646) 692-9912', 'rating': 4.4}\n",
       "--------------------------------------------------------------------------------\n",
-      "Score: 0.8382061\n",
+      "Score: 0.83862585\n",
       "Review Text: I always come here for authentic japanese hot pot! Tama recommended this place so ty and I went once! It was VERY authentic and the broth flavor reminded me of when my grandma would make soup from scratch in japan. I kept drinking the soup cause ut was SO YUMMY The nabe sat on a portable gas stove which was so hype. Aesthetic out of 10!! The salmon in the don was very yummy!! The spicy salmon one was good too but nothing special. The avocado was the tiniest bit overripe but i loved the texture of the rice and flavoring too. Also the music was jazzy and classy! So cozy in the winter!! Loved this place!!\n",
       "\n",
       "Came back here again LOL they love playing my moms music its so good!\n",
       "Meadata: {'business_id': 'eQ4QUGvuHGBzsOrphsVc6A', 'name': 'Kimura', 'image_url': 'https://s3-media1.fl.yelpcdn.com/bphoto/qGw89FLVSK3OwX0UCJH6QA/o.jpg', 'business_url': 'https://www.kimuranyc.com', 'display_address': '31 St Marks Pl', 'display_phone': '(917) 905-1864', 'rating': 4.5}\n",
       "--------------------------------------------------------------------------------\n",
-      "Score: 0.83803844\n",
+      "Score: 0.83788866\n",
       "Review Text: Came here for lunch on a weekend and it was packed but was able to get seats at the bar. I would recommend getting a reservation if possible. We got the curry cheese wings to start off. The wings were delectably seasoned and slightly crispy. I could definitely taste some curry flavor but I wish there was more Parmesan as only the wings on top had any. I got the Tokyo ramen which had a wonderfully flavorful broth. I liked that it was lighter compared to other places. The noodles were springy and fresh. \n",
       "\n",
       "For dessert, we got a Tokyo banana and mango kaki-gori. The banana dessert was heaven and I would highly recommend! The kaki-gori came in a larger size than anticipated which was great for sharing. There were also small dices of tart mango in the ice. \n",
@@ -416,7 +416,27 @@
       "The service was attentive and efficient. We didn't have to wait long to get our next dish after finishing. The place gets pretty loud however and made it really hard to even hear someone sitting next to me. Aside from that, this was a great experience and look forward to trying their other offerings.\n",
       "Meadata: {'business_id': 'OFfZUS-nu6NDnsWe1B2bUQ', 'name': 'Tonchin', 'image_url': 'https://s3-media1.fl.yelpcdn.com/bphoto/14Xg3zb8wzjHSEf6hYXRjw/o.jpg', 'business_url': 'https://www.tonchinus.com', 'display_address': '13 W 36th St', 'display_phone': '(646) 692-9912', 'rating': 4.4}\n",
       "--------------------------------------------------------------------------------\n",
-      "Score: 0.8371548\n",
+      "Score: 0.8374065\n",
+      "Review Text: Street parking, but we had no issues finding a spot on a Thursday evening.\n",
+      "\n",
+      "Service is attentive. We had a reservation for the dining room, which was comfortably spaced. We came on the early side, but it was already starting to get crowded. There was a line by the time we left.\n",
+      "\n",
+      "It was Happy Hour when we arrived, so we decided to get a Half Dozen Oysters, which came with a yuzu vinaigrette. It was very fresh and great quality. The yuzu vinaigrette gave it a lovely citrus balance. The oysters are nicely separate from the shell, and if you prefer to eat it with a tiny fork, it's there too.\n",
+      "\n",
+      "The Original Tebasaki has a soy marinade and spicy seasoning on it. It is well balanced in flavor with the chicken. I love the spiciness on it, though I'm surprised they don't have a non spicy version with how tasty their chicken is! They brought out wet wipes with it, so get your hands dirty!\n",
+      "\n",
+      "The Tsukemen very flavorful, and not overly salty. Perfect whole wheat noodles to go with the heavier broth. It came with a lemon and sesame seeds that you can add to the broth to change the flavor, which made it lighter and toastier. The chasu was big and tender. \n",
+      "\n",
+      "I tried a sip of the broth of the Smoked Dashi, and if you enjoy that flavor, this is a must get! Comes with thin noodles and lots of clams!\n",
+      "\n",
+      "Momo drink was light and good accompaniment to the meal \n",
+      "\n",
+      "The Tokyo Banana had some lovely bananas and light cream. I loved the mix of textures.\n",
+      "\n",
+      "Everything was fresh and great in flavor. Worth the trek for me!\n",
+      "Meadata: {'business_id': 'lT-yNq6BW2vonJ9Ik-T5vg', 'name': 'Tonchin', 'image_url': 'https://s3-media1.fl.yelpcdn.com/bphoto/YZajBHZmkocCa4-ncr1LlA/o.jpg', 'business_url': 'https://www.tonchinus.com/hours-locations-brooklyn', 'display_address': '109 N 3rd St', 'display_phone': '(347) 457-5528', 'rating': 4.3}\n",
+      "--------------------------------------------------------------------------------\n",
+      "Score: 0.8361476\n",
       "Review Text: I made a reservation through resy for a group of 8 for my grandpas birthday for noon (lunch time). Don't know if it was because it was a holiday, Columbus day, but we could only order of the dinner menu, which was not a problem. Good attentive service and great ambience. Would definitely visit again.\n",
       "\n",
       "What we ordered:\n",
@@ -429,6 +449,36 @@
       "- hakata motsu nabe: my favorite dish of the meal with my favorite beef intestines cooked table side and beautifully presented with some leeks, cabbage, tofu, chili that tasted very pure with its delicate flavor 10/10\n",
       "- sukiyaki with u.s. wagyu beef: beef was wonderfully  tender and vegetables soaked up the sweet broth and cooked table side; my family loved this one 10/10\n",
       "Meadata: {'business_id': 'eQ4QUGvuHGBzsOrphsVc6A', 'name': 'Kimura', 'image_url': 'https://s3-media1.fl.yelpcdn.com/bphoto/qGw89FLVSK3OwX0UCJH6QA/o.jpg', 'business_url': 'https://www.kimuranyc.com', 'display_address': '31 St Marks Pl', 'display_phone': '(917) 905-1864', 'rating': 4.5}\n",
+      "--------------------------------------------------------------------------------\n",
+      "Score: 0.83581924\n",
+      "Review Text: The food was amazing. Got the for 2 tasting menu. The salmon sashimi was very tasty. The fried items could have gone better just grilled and it was too dry.  The sushi rolls was good esp the shrimp tempura. The nabe was a great portion size and could add noodles. Lastly the tofu dessert was refreshing and light. Service was good they helped cook the nabe and scoop them into bowl for us.\n",
+      "Meadata: {'business_id': 'eQ4QUGvuHGBzsOrphsVc6A', 'name': 'Kimura', 'image_url': 'https://s3-media1.fl.yelpcdn.com/bphoto/qGw89FLVSK3OwX0UCJH6QA/o.jpg', 'business_url': 'https://www.kimuranyc.com', 'display_address': '31 St Marks Pl', 'display_phone': '(917) 905-1864', 'rating': 4.5}\n",
+      "--------------------------------------------------------------------------------\n",
+      "Score: 0.83453315\n",
+      "Review Text: Are you craving Japanese Hotpot?!\n",
+      "\n",
+      "Look no further! This is the restaurant you have been looking for.\n",
+      "\n",
+      "The restaurant gave me a sushi bar vibe when I first walked in. I loved the wooden tableware and the small stove that came out with the hotpot.\n",
+      "\n",
+      "We ordered the shabu shabu with beef, takowasabi, and yuzu miso salmon. They were all super delicious.\n",
+      " \n",
+      "The hotpot comes out warm ;therefore, you have to wait a few minutes for the broth to boil. There are separate black chopsticks for the raw meat. \n",
+      "\n",
+      "The service was excellent! They would always come back to fill your water glass and soup base. They would help push down the vegetables and meat in the beginning when the soup is boiling to help you get started. \n",
+      "\n",
+      "Overall, I would come back again to try the sukiyaki and sushi!\n",
+      "Meadata: {'business_id': 'eQ4QUGvuHGBzsOrphsVc6A', 'name': 'Kimura', 'image_url': 'https://s3-media1.fl.yelpcdn.com/bphoto/qGw89FLVSK3OwX0UCJH6QA/o.jpg', 'business_url': 'https://www.kimuranyc.com', 'display_address': '31 St Marks Pl', 'display_phone': '(917) 905-1864', 'rating': 4.5}\n",
+      "--------------------------------------------------------------------------------\n",
+      "Score: 0.83390117\n",
+      "Review Text: We ordered:\n",
+      "1. Hakata Motsu Nabe 博多もつ鍋 - Beef Intestine, cabbage, leek, tofu, sesame, chili, burdock\n",
+      "2. Kushiage Party combo - Beef, Chicken & Scallion, Pumpkin, Shiitake mushroom, Scallop, Salmon\n",
+      "\n",
+      "Really great, unique Japanese restaurant that specializes in Japanese hot pot. Our hot pot broth was rich and soothing in the cold temperature. I think they give you an appropriate portion for the number of people assuming you order at least one appetizer or other dish for the table. Kushiage were crispy and properly cooked inside. The bbq and mustard sauces were perfect for the skewers.\n",
+      "\n",
+      "Service was good. They checked on us, even replaced a skewer that fell to the floor. We got outdoor seating which was in a tent with a heater. It was comfortable.\n",
+      "Meadata: {'business_id': 'eQ4QUGvuHGBzsOrphsVc6A', 'name': 'Kimura', 'image_url': 'https://s3-media1.fl.yelpcdn.com/bphoto/qGw89FLVSK3OwX0UCJH6QA/o.jpg', 'business_url': 'https://www.kimuranyc.com', 'display_address': '31 St Marks Pl', 'display_phone': '(917) 905-1864', 'rating': 4.5}\n",
       "--------------------------------------------------------------------------------\n"
      ]
     }
@@ -438,7 +488,7 @@
     "\n",
     "query_engine = index.as_query_engine()\n",
     "\n",
-    "retriever = VectorIndexRetriever(index=index, similarity_top_k=6)\n",
+    "retriever = VectorIndexRetriever(index=index, similarity_top_k=10)\n",
     "\n",
     "# Example Retrieval\n",
     "query = \"What restaurants should I try that have great Japanese food?\"\n",
@@ -452,6 +502,32 @@
     "    print(\"Review Text:\", doc.text)  \n",
     "    print(\"Meadata:\", doc.metadata)  \n",
     "    print(\"-\" * 80)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'business_id': 'eQ4QUGvuHGBzsOrphsVc6A',\n",
+       " 'name': 'Kimura',\n",
+       " 'image_url': 'https://s3-media1.fl.yelpcdn.com/bphoto/qGw89FLVSK3OwX0UCJH6QA/o.jpg',\n",
+       " 'business_url': 'https://www.kimuranyc.com',\n",
+       " 'display_address': '31 St Marks Pl',\n",
+       " 'display_phone': '(917) 905-1864',\n",
+       " 'rating': 4.5}"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "retrieved_docs[0].metadata"
    ]
   },
   {
