Made some quick fixes to make the backend work

--- a/backend/RAG.ipynb
+++ b/backend/RAG.ipynb
@@ -506,28 +506,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'business_id': 'eQ4QUGvuHGBzsOrphsVc6A',\n",
-       " 'name': 'Kimura',\n",
-       " 'image_url': 'https://s3-media1.fl.yelpcdn.com/bphoto/qGw89FLVSK3OwX0UCJH6QA/o.jpg',\n",
-       " 'business_url': 'https://www.kimuranyc.com',\n",
-       " 'display_address': '31 St Marks Pl',\n",
-       " 'display_phone': '(917) 905-1864',\n",
-       " 'rating': 4.5}"
+       "'eQ4QUGvuHGBzsOrphsVc6A'"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "retrieved_docs[0].metadata"
+    "retrieved_docs[0].metadata.get(\"business_id\")"
    ]
   },
   {
